--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
             <div class="footer-section">
                 <h4>تواصل معنا</h4>
                 <div class="social-links">
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://github.com/adce626" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://x.com/adce626" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-telegram"></i></a>
                 </div>
